# pytest-jubilant-extension-meta

./: README.md  pyproject.toml  tox.ini
pytest_jubilant_extension_meta/: __init__.py  base.py  juju.py  manager.py
